# api.mind-spark.ru

./: .dockerignore  .env  .gitignore  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/dependencies/: services.py
app/api/v1/endpoints/: items.py  sessions.py  users.py
app/core/: config.py
app/db/: session.py
app/domain/models/: __init__.py  session_models.py  tokens_models.py  users.py  users_models.py
app/domain/schemas/: __init__.py  auth_schemas.py  tokens_schemas.py  users.py  users_schemas.py
app/repositories/: sessions_repository.py  token_repository.py  user_repository.py
app/services/: session_service.py  user_service.py
