[tool.poetry]
name = "mind-spark-ru"
version = "0.1.0"
description = ""
authors = ["Vladimir Tsyganov <tsyganov.vv0228@gmail.com>"]
readme = "README.md"

packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
sqlalchemy = ">=2.0.0"
asyncpg = ">=0.29.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = ">=2.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = "1.7.4"
python-multipart = ">=0.0.6"
alembic = ">=1.12.0"
redis = ">=5.0.0"
python-dotenv = ">=1.0.0"
httpx = ">=0.25.0"
greenlet = "^3.3.0"
bcrypt = "4.1.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
black = ">=23.0.0"
isort = ">=5.12.0"
mypy = ">=1.6.0"
pre-commit = ">=3.5.0"
factory-boy = ">=3.3.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.build_meta"

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"